# wikipedia-analysis

./: .gitignore  Cargo.toml  README.md  run-analysis.sh
ignored-articles/: cities.txt  countries.txt  dates.txt  misc.txt  states-provinces-territories.txt
src/: analyze.rs  main.rs  parse.rs
