[package]
name = "wikipedia-analysis"
edition = "2018"
version = "0.1.0"
authors = ["Tom Dransfield <contact@tdransfield.net>"]

[dependencies]
quick-xml = "0.17.2"
clap = "2.33.0"
regex = "1.3.1"
rand = "0.7.3"
rayon = "1.3.0"
num_cpus = "1.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false
